--- a/Web/Pages/Index.cshtml
+++ b/Web/Pages/Index.cshtml
@@ -6,5 +6,10 @@
 
 <div class="text-center">
     <h1 class="display-4">Welcome To Azure App Service</h1>
-
+    <p>
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+        Sint iusto, fugiat congue duo facer minim laboris invidunt anim nostrud aliqua facilisis labore
+        ut sea stet sea takimata feugiat adipiscing tempor praesent eleifend delenit
+        eros nonummy ipsum feugait. Mazim exerci eum.
+    </p>
 </div>
